# tauri_glance

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Package.swift  README.md  README_ZH.md  SWIFT_REWRITE_SPEC.md  SwiftGlance.entitlements  build_app.sh  package-lock.json  package.json
.github/workflows/: build.yml
Resources/: AppIcon.icns
Resources/AppIcon/: make_icon.swift
Sources/SwiftGlance/: AppDelegate.swift  CounterSource.swift  LaunchAtLoginManager.swift  RateDiffer.swift  SpeedFormatter.swift  StatusImage.swift  StatusPipeline.swift  SystemMonitor.swift  main.swift
Tests/SwiftGlanceTests/: RateDifferTests.swift  SpeedFormatterTests.swift  StatusPipelineTests.swift
docs/: ui-spec.md
docs/adr/: 0001-widget-top-level-overlay.md  0002-no-tray-menu-via-widget-right-click.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html
