[package]
name = "tauri-glance"
version = "0.1.0"
description = "看一眼 — 跨平台系统监控"
authors = ["Julian"]
edition = "2021"

[lib]
name = "tauri_glance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
sysinfo = "0.33"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
# Windows 悬浮窗事件 payload 序列化（仅 Windows 用到，其它平台为未用依赖）
serde = { version = "1", features = ["derive"] }

