[package]
name = "tauri-glance"
version = "0.1.0"
description = "看一眼 — 跨平台系统监控"
authors = ["Julian"]
edition = "2021"

[lib]
name = "tauri_glance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
# 单实例守卫：第二次启动直接退出，避免点图标开出多个进程
tauri-plugin-single-instance = "2"
sysinfo = "0.33"
# Windows 悬浮窗事件 payload 序列化（仅 Windows 用到，其它平台为未用依赖）
serde = { version = "1", features = ["derive"] }

# Windows：SetParent 把悬浮窗嵌入任务栏所需的裸 Win32 调用
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
] }

# macOS：用 Core Text 以系统字体把菜单栏图标光栅化（替代 font8x8 点阵）
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
core-text = "21"

# macOS：渲染结果存 PNG 预览的测试用
[target.'cfg(target_os = "macos")'.dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

